--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,6 +7,6 @@
         "type": "node",
         "request": "launch",
         "name": "Run Server",
-        "program": "${workspaceRoot}/server/index.js"
+        "program": "${workspaceRoot}/server/app.js"
     }]
 }
